--- a/public/style.css
+++ b/public/style.css
@@ -66,7 +66,7 @@ p{
 width: 200px;
 margin-top: var(--space);
 }
-#search,#profile,#cart {
+#search, #profile,#cart {
     width: 35px;
 }
 nav{
@@ -122,7 +122,6 @@ li:hover{
 section{
     width: 100vw;
     height: 90vh;
-     overflow-x: hidden;
      box-sizing: border-box;
      display: grid;
      grid-template-columns: 1fr 1fr;
@@ -150,6 +149,7 @@ section{
     height: 100%;
     position: absolute;
 }
+
 /* Animated logos  */
 .logos-slider{
     /* background-color: grey; */
@@ -176,14 +176,14 @@ width: 120px;
 height: 120px;
 object-fit: cover;
 }
-@keyframes automove {
+/* @keyframes automove {
     0%{
         left :100%
     }
     100%{
         left : -100%
     }
-}
+} */
 .Personalized-Feature{
     display: flex;
     gap: 30px;
@@ -191,6 +191,7 @@ object-fit: cover;
     left: 75vw;
     width: 20vw;
     top: 12vh;
+    justify-content: center;
 }
 .Personalized-Feature button{
     font-family: var(--Navigation-font);
@@ -200,6 +201,7 @@ object-fit: cover;
     border: none;
     cursor: pointer;
 }
+
 /* Filter Feature */
 .filter-container {
     position: fixed;
@@ -207,34 +209,74 @@ object-fit: cover;
     left: 0;
     width: 20vw;
     height: 100vh;
-    background: rgba(0, 0, 0, 0.8);
-    color: white;
+    background: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     padding: 20px;
     z-index: 2000;
     transition: transform 0.3s ease-in-out;
+    font-family: var(--Navigation-font);
 }
 .hidden {
     transform: translateX(-100%);
 }
 .close-btn {
     position: absolute;
-    top: 10px;
-    right: 15px;
-    font-size: 24px;
+    top: 25px;
+    right: 35px;
+    font-size: large;
+    font-weight: 800;
     cursor: pointer;
     z-index: 1000;
 }
-
-
-
-
-
-
-
-
-
-
-
+.filter{
+    width: fit-content;
+    height: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+#filter{
+    width: 30px;
+}
+.filterOption{
+    margin-top: 2vh;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    font-family: var(--Navigation-font);
+}
+.options{
+    margin-top: 8vh;
+}
+.slection{
+    width:70vw;
+    height: 5vh;
+    position: relative;
+    top: 3vw;
+    left: 5%;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    flex-direction: row-reverse;
+}
+.selected{
+    text-align: center;
+    background-color: rgb(117, 115, 115);
+    border-radius: 3px;
+    width:fit-content;
+    height: 5vh;
+    display: flex;
+    align-items: center;
+    padding: 5px;
+    justify-content: center;
+    gap: 15px;
+    visibility: hidden;
+    font-family: var(--Navigation-font);
+}
+.selected span{
+cursor: pointer;
+font-weight: 700;
+}
 
 /* Products Showcase Code */
 .products{
@@ -262,6 +304,7 @@ object-fit: cover;
     height: 60%;
     border: 2px solid;
 }
+
 footer{
     width: 100vw;
     height: 10vh;
@@ -269,7 +312,9 @@ footer{
     margin-top: 5vh;
     background-color: gray;
     text-align: center;
-    line-height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-family: var(--Navigation-font);
 }
 
