--- a/frontend/style.css
+++ b/frontend/style.css
@@ -119,7 +119,7 @@ li:hover{
     align-items: center;
     gap: 30px;
 }
-/* Coder For Hero Section content */
+/* Code For Hero Section content */
 section{
     width: 100vw;
     height: 90vh;
@@ -151,40 +151,53 @@ section{
     position: absolute;
 }
 
-/* Animated logos  */
-.logos-slider{
-    /* background-color: grey; */
+/* Animated logos   */
+ .logos-slider{
+    mask-image: linear-gradient(to right, transparent 10%, #c2b8b8 40%, #c2b8b8 60%, transparent 95%);
     grid-column: 1 / -1;
-    height: 10vh;
+    height: 13vh;
     border: 2pxx solid;
+    /* margin-top: 20px; */
     display: flex;
     align-items: center;
     gap: 200px;
     overflow: hidden;
 }
-.item{
+.slide{
+    width: 100%;
+min-height:120px;
+display : flex;
+justify-content: center;
+align-items: center;
+/* background-color: purple; */
+}
+ .item{
     width: 20%;
     height: 08vh;
     position: absolute;
     display: flex;
     align-items: center;
     left: 100%;
-    animation: automove 20s linear infinite;
+    animation: automove 12s linear infinite;
     animation-delay: calc((10s /10) * (var(--position) - 1))!important;
-}
+}  
 .item img{
 width: 120px;
 height: 120px;
 object-fit: cover;
-}
-/* @keyframes automove {
+}  
+@keyframes automove {
     0%{
-        left :100%
+        left: 100%
     }
     100%{
         left : -100%
     }
-} */
+}
+
+
+
+
 .Personalized-Feature{
     display: flex;
     gap: 30px;
@@ -324,6 +337,8 @@ font-weight: 700;
     object-fit: cover;
     margin-top: 10px;
 }
+
+
 
 footer{
     width: 100vw;
