--- a/frontend/style.css
+++ b/frontend/style.css
@@ -5,9 +5,9 @@
 :root{
     --font-size: 1.5rem;
     --dark-grey : #3d3a36;
-    --light-grey : #f5f5ee;
+    --light-grey : #f5f5eee1;
     --white:#feffff;
-    --primarycolor :hsl(26, 100%, 55%);
+    --primarycolor :#FF9149;
     --space: 20px;
     --heading-font : ;
     --Navigation-font:'Sulphur Point'; 
@@ -24,36 +24,27 @@ body{
     margin: 0;
     overflow-x: hidden; 
 }
-/* Code For Header - NavBar */
+
 header{
     width: 100vw;
     height: 10vh;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    gap: 20px;
     align-items: center;
     margin: 0 auto;
+    margin-top: 1vw;
     position: sticky;
     top: 0%;
     z-index: 100;
     transition: var(--transitionOut);
 }
+.header{
+    width: 80%;
+    margin-top: 1vw;
+}
 .scrolled{
-    background-color: #e7ddcf;
-}
-h1{
-    font-family: "Raleway", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 300;
-    font-size: 70px;
-    margin-top: 08vw;
-    margin-left: 5vw;
-}
-p{
-   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 1.5rem;
-    text-align: center;
-    font-weight: lighter;
-    margin: 1vw 3vw;
+    background-color: #e6e1daee;
 }
 .logo{
     width: 10%;
@@ -63,11 +54,11 @@ p{
     align-items: center;
 }
 #logo{
-width: 200px;
-margin-top: var(--space);
+    width: 70px;
+    margin-top: 10px;
 }
 #search, #profile,#cart {
-    width: 35px;
+    width: 32px;
 }
 nav{
     width: 20%;
@@ -89,8 +80,8 @@ ul li{
 li:hover{
     transform: translateY(-08px);
     transition: var(--transition);
-    color : blue;
-  }
+    color :var(--primarycolor);
+}
 .search-bar{
     width: 30%;
     height: 100%;
@@ -100,7 +91,7 @@ li:hover{
     gap: 10px;
 }
 .search-bar input{
-   background-color: rgb(255, 255, 255);
+    background-color: rgb(255, 255, 255);
     border: none;
     width: 70%;
     height: 60%;
@@ -113,13 +104,11 @@ li:hover{
 .personalization{
     width: 20%;
     height: 100%;
-    /* background-color: palegreen; */
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 30px;
 }
-
 hr{
     width: 85%;
     margin: auto;  
@@ -133,24 +122,39 @@ section{
      grid-template-columns: 1fr 1fr;
      grid-template-rows: auto auto; 
      row-gap: 0px;
-     
 }
 .left-content, .right-content{
     height: 80vh;  
 }
+h1{
+    font-family: "Raleway", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-size: 70px;
+    margin-top: 08vw;
+    margin-left: 8vw;
+    
+}
+.text{
+    color: var(--primarycolor);
+}
+p{
+   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1.5rem;
+    text-align: center;
+    font-weight: lighter;
+    margin: 1vw 5vw;
+} 
 .right-content{
     display: flex;
     justify-content: flex-start;
-    /* background-color: palegoldenrod; */
 }
-/* Hero Section Animation */
 .Slider{
     margin-left: 2vw;
-    margin-bottom: 4vw;
     width: 40vw;
     height: 80%;
     position: relative;
-    top:15%;
+    top:8%;
     left: 10%;
 }
 .Slider img {
@@ -158,7 +162,7 @@ section{
     height: 100%;
     position: relative;
   }
-  .animated-img {
+.animated-img {
     animation: rippleZoom 1.2s ease forwards;
   }
   @keyframes rippleZoom {
@@ -176,7 +180,6 @@ section{
       filter: blur(0px);
     }
   }
-
  
 /* Animated logos   */
  .logos-slider{
@@ -298,7 +301,7 @@ object-fit: cover;
 }
 .selected{
     text-align: center;
-    background-color: rgb(117, 115, 115);
+    background-color:var(--primarycolor);
     border-radius: 3px;
     width:fit-content;
     height: 5vh;
@@ -329,17 +332,16 @@ font-weight: 700;
 .card{
     width: 20vmax;
     height: 50vh;
-    border: 2px solid;
     display: flex;
+    border-radius: 5px;
     flex-direction: column;
     align-items: center;
     background-color: white;
-    /* transition: all 2s ease-out ; */
+    /* box-shadow: 0px 4px 4px #00000030, 0px 12px 12px #00000015; */
+    /* box-shadow: 0px 4px 4px #00000030; */
+    box-shadow: 2px 5px 12px rgba(0, 0, 0, 0.2);
 }
-/* .card :hover{
-    width:21vmax;
-    height: 52vh;
-} */
+
 .card button{
     width: 120px;
     height: 45px;
@@ -369,6 +371,7 @@ font-weight: 700;
     height: 70%;
     object-fit: cover;
     margin-top: 10px;
+    border-radius: 4px;
 }
 
 
@@ -378,7 +381,8 @@ footer{
     height: 10vh;
     margin-bottom: 0px;
     margin-top: 5vh;
-    background-color: gray;
+    background-color: rgba(0, 0, 0, 0.925);
+    color: var(--primarycolor);
     text-align: center;
     display: flex;
     justify-content: center;
