--- a/frontend/style.css
+++ b/frontend/style.css
@@ -24,7 +24,6 @@ body{
     margin: 0;
     overflow-x: hidden; 
 }
-
 header{
     width: 100vw;
     height: 10vh;
@@ -337,32 +336,15 @@ font-weight: 700;
     flex-direction: column;
     align-items: center;
     background-color: white;
-    /* box-shadow: 0px 4px 4px #00000030, 0px 12px 12px #00000015; */
-    /* box-shadow: 0px 4px 4px #00000030; */
     box-shadow: 2px 5px 12px rgba(0, 0, 0, 0.2);
 }
 
-.card button{
-    width: 120px;
-    height: 45px;
-    cursor: pointer;
-    background-color: var(--primarycolor);
-    color: white;
-    border: none;
-    border-radius: 8px;
-    font-size: 20px;
-}
-.card p {
-    font-size: 18px;
-    font-weight: 400;
-    border: none;
-    text-align: left;
-    width: 80%;
-    margin-top: 3px;
-}
 .product-info{
-    display:flex;
-    width: 80%;
+    display:flex; 
+    width: 84%;
+    height: 30px;
+    align-items: center;
+    margin-top: 5px;
     justify-content: space-between;
     align-items: center;
 }
@@ -374,8 +356,25 @@ font-weight: 700;
     border-radius: 4px;
 }
 
+.buy {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 84%;
+  height: 40%;
+  align-items: center;
+  flex-direction: row-reverse;
+}
 
-
+.buy-btn {
+    padding: 10px 20px;
+    background-color: var(--primarycolor);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+  }
 footer{
     width: 100vw;
     height: 10vh;
