--- a/frontend/product.css
+++ b/frontend/product.css
@@ -1,7 +1,10 @@
-@import url("https://fonts.gstatic.com/s/raleway/v34/1Ptug8zYS_SKggPNyCMIT5lu.woff2");
+@import url(https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap);
 :root{
     --font-family: 'Raleway';
-   --font-style: normal;
+    --font-style: normal;
+    --display : none;
+    --imageurl : url(images/laptop-dell-xps-15.jpg);
+    --zoom-x: 0%; --zoom-y: 0%;
 }
 .container{
     width: 60vw;
@@ -14,13 +17,27 @@
 .leftcontent{
     width: 50%;
     height: 100%;
-    display: flex;
-    align-items: center;
+    position: relative;
+}
+.leftcontent::after{      
+    content: '';         
+    display: var(--display);
+    background-color: black;
+    pointer-events: none;         /* this will make the overlay not block mouse events */
+    width: 100%;
+    height: 100%;
+    background-position: var(--zoom-x) var(--zoom-y);
+    background-image: var(--imageurl);
+    position: absolute;
+    left: 0;
+    top:  0;
+    background-size: 200%;
 }
 img{
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: 0 0;
 }
 .rightContent{
     width: 40%;
