--- a/frontend/product.css
+++ b/frontend/product.css
@@ -46,13 +46,13 @@ img{
     margin-left: 4%;
 }
 h4{
-    font-size: 18px;
+    font-size: 20px;
 }
 p{
     font-size: 22px;
 }
 .button{
-    width:45%;
+    width:40%;
     height: 6vh;
     border-radius: 4px;
     display: flex;
@@ -69,12 +69,12 @@ p{
     display: flex;
     width: 100%;
     height: 25%;
-    align-items: center;
-    justify-content: center;
-    gap:50px;
+    align-items: left;
+    justify-content:flex-start;
+    gap: 10px;
 }
 .buy button{
- width: 6vw;
+ width: 5vw;
  height: 5vh;
 }
 .cart button{
